fixed padding at bottom of footer which was causing white space

--- a/css/sass/main.css
+++ b/css/sass/main.css
@@ -172,87 +172,89 @@ section {
       margin-left: 15%;
       width: 70%; }
 
-.footer-section .logo img {
-  margin-top: 10%;
-  margin-bottom: 2%; }
-.footer-section .footer-quote {
-  font-size: 2rem;
-  opacity: 0.8; }
-.footer-section .social-icons {
-  /* Icons */
-  /* pop-up text */
-  /* pop-up text arrow */
-  /* text pops up when icon is in hover state */
-  /* font awesome icons */ }
-  .footer-section .social-icons div {
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -ms-transform: translate(-50%, -50%);
-    -webkit-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%); }
-  .footer-section .social-icons a {
-    color: #fff;
-    opacity: 0.7;
-    font-size: 3rem;
-    border-radius: 4px;
-    text-align: center;
-    text-decoration: none;
-    font-family: fontawesome;
-    position: relative;
-    display: inline-block;
-    width: 40px;
-    height: 28px;
-    padding-top: 12px;
-    margin: 0 2px;
-    -o-transition: all .5s;
-    -webkit-transition: all .5s;
-    -moz-transition: all .5s;
-    transition: all .5s;
-    -webkit-font-smoothing: antialiased;
-    margin-bottom: 5%; }
-  .footer-section .social-icons a:hover {
-    color: #fff;
-    opacity: 1; }
-  .footer-section .social-icons a span {
-    color: #666;
-    position: absolute;
-    font-family: sans-serif;
-    bottom: 0;
-    left: -25px;
-    right: -25px;
-    padding: 5px 7px;
-    z-index: -1;
-    font-size: 14px;
-    border-radius: 2px;
-    background: #fff;
-    visibility: hidden;
-    opacity: 0;
-    -o-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    -moz-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
-    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
-  .footer-section .social-icons a span:before {
-    content: '';
-    width: 0;
-    height: 0;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 5px solid #fff;
-    position: absolute;
-    bottom: -5px;
-    left: 40px; }
-  .footer-section .social-icons a:hover span {
-    bottom: 50px;
-    visibility: visible;
-    opacity: 1; }
-  .footer-section .social-icons a:nth-of-type(1):before {
-    content: '\f0e1'; }
-  .footer-section .social-icons a:nth-of-type(2):before {
-    content: '\f09b'; }
-  .footer-section .social-icons a:nth-of-type(3):before {
-    content: '\f01c'; }
+.footer-section {
+  margin-bottom: 0px; }
+  .footer-section .logo img {
+    margin-top: 10%;
+    margin-bottom: 2%; }
+  .footer-section .footer-quote {
+    font-size: 2rem;
+    opacity: 0.8; }
+  .footer-section .social-icons {
+    /* Icons */
+    /* pop-up text */
+    /* pop-up text arrow */
+    /* text pops up when icon is in hover state */
+    /* font awesome icons */ }
+    .footer-section .social-icons div {
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      -ms-transform: translate(-50%, -50%);
+      -webkit-transform: translate(-50%, -50%);
+      transform: translate(-50%, -50%); }
+    .footer-section .social-icons a {
+      color: #fff;
+      opacity: 0.7;
+      font-size: 3rem;
+      border-radius: 4px;
+      text-align: center;
+      text-decoration: none;
+      font-family: fontawesome;
+      position: relative;
+      display: inline-block;
+      width: 40px;
+      height: 28px;
+      padding-top: 12px;
+      margin: 0 2px;
+      -o-transition: all .5s;
+      -webkit-transition: all .5s;
+      -moz-transition: all .5s;
+      transition: all .5s;
+      -webkit-font-smoothing: antialiased;
+      margin-bottom: 5%; }
+    .footer-section .social-icons a:hover {
+      color: #fff;
+      opacity: 1; }
+    .footer-section .social-icons a span {
+      color: #666;
+      position: absolute;
+      font-family: sans-serif;
+      bottom: 0;
+      left: -25px;
+      right: -25px;
+      padding: 5px 7px;
+      z-index: -1;
+      font-size: 14px;
+      border-radius: 2px;
+      background: #fff;
+      visibility: hidden;
+      opacity: 0;
+      -o-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      -webkit-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      -moz-transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+      transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55); }
+    .footer-section .social-icons a span:before {
+      content: '';
+      width: 0;
+      height: 0;
+      border-left: 5px solid transparent;
+      border-right: 5px solid transparent;
+      border-top: 5px solid #fff;
+      position: absolute;
+      bottom: -5px;
+      left: 40px; }
+    .footer-section .social-icons a:hover span {
+      bottom: 50px;
+      visibility: visible;
+      opacity: 1; }
+    .footer-section .social-icons a:nth-of-type(1):before {
+      content: '\f0e1'; }
+    .footer-section .social-icons a:nth-of-type(2):before {
+      content: '\f09b'; }
+    .footer-section .social-icons a:nth-of-type(3):before {
+      content: '\f01c'; }
 
 .container-skillbar {
   width: 100%;
