--- a/css/sass/utilities/layouts/_section.scss
+++ b/css/sass/utilities/layouts/_section.scss
@@ -52,6 +52,8 @@ section {
 
 
 .footer-section {
+    margin-bottom: 0px;
+    
     .logo {
         img {
             margin-top: 10%;
